Added tests and fixed an error
